[package]
name = "memory_set"
description = "Data structures and operations for managing memory mappings"
documentation = "https://docs.rs/memory_set"
keywords = ["arceos", "virtual-memory", "memory-area", "mmap"]

version = "0.3.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
#rust-version.workspace = true

[features]
RAII = ["memory_addr/RAII"]
mmap = []

[dependencies]
memory_addr = { path = "../memory_addr", version = "0.3.2" }
